Bug 98896 - EditorCommand::executeToggleStyleInList calls StylePropertySet::setProperty with the wrong parameters.
Summary: EditorCommand::executeToggleStyleInList calls StylePropertySet::setProperty w...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mike West
URL:
Keywords:
Depends on:
Blocks: 98050
  Show dependency treegraph
 
Reported: 2012-10-10 06:42 PDT by Mike West
Modified: 2012-10-10 07:29 PDT (History)
3 users (show)

See Also:


Attachments
Patch (2.33 KB, patch)
2012-10-10 06:47 PDT, Mike West
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mike West 2012-10-10 06:42:25 PDT
EditorCommand::executeToggleStyleInList calls StylePropertySet::setProperty with the wrong parameters.
Comment 1 Mike West 2012-10-10 06:47:48 PDT
Created attachment 167991 [details]
Patch
Comment 2 Mike West 2012-10-10 06:51:58 PDT
Hi Jochen. :) Same story here as 98892; would you mind taking a look?
Comment 3 WebKit Review Bot 2012-10-10 07:29:37 PDT
Comment on attachment 167991 [details]
Patch

Clearing flags on attachment: 167991

Committed r130900: <http://trac.webkit.org/changeset/130900>
Comment 4 WebKit Review Bot 2012-10-10 07:29:40 PDT
All reviewed patches have been landed.  Closing bug.