EditorCommand calls setProperty with the wrong parameters. https://bugs.webkit.org/show_bug.cgi?id=98896

Patch by Mike West <mkwst@google.com> on 2012-10-10
Reviewed by Jochen Eisinger.

EditorCommand::executeToggleStyleInList calls
StylePropertySet::setProperty with an ExceptionCode as the final
argument. This only succeeds because it's automagically cast to a bool,
which is what the method actually expects.

Implicitly passing in 'false' by dropping the parameter shouldn't change
any visible functionality; no new tests are required.

* editing/EditorCommand.cpp:
(WebCore::executeToggleStyleInList):

Canonical link: https://commits.webkit.org/116878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130900 268f45cc-cd09-0410-ab3c-d52691b4dbfc